1.15.0
NEW
    - Added support for GearScore Addon at player hero panel

1.14.3
    - Fix a Questie bug

1.14.2
FIXES
    - Some smaller bugs

1.14.1
FIXES
    - Fix issue with override incompatible addon function

1.14.0
NEW
    - Added preview mode for party and raidframes

FIXES
    - Fix and issues with unknown spells
    - Healtglobe now works with mouseover addons

MISC
    - You can now link talents into the chat

1.13.1
FIXES
    - If incompatible addons are loaded that is now mentioned at the gw2 settings

MISC
    - The setting "Dungeon & Raid Debuffs" has now tooltips
    - Added and exeption for incompatible bag addons

1.13.0
NEW
    - Added option to show party pets 
    - Added unknown spells tab

ADDED
    - Error handler
    - Incompatible Addon check

1.12.1
FIXES
    - Stats issue

1.12.0
NEW
    - Added option to show pet auras under the frame
    - Added option to show a additional ressourcebar with player as target frame
    - Added aborb value to healtglobe (we calculate the player absorb based on buffs)

FIXES
    - Some stats tooltips

1.11.0
NEW
    - Added quest items to quest tracker (required Questie)

FIXES
    - Sorting for special bags

1.10.1
FIXES
    - Minimap can now be moved

1.10.0
NEW
    - You can now track as many quests as you want and untrack them
    - Quest sorting by: Default, Level, Zone (required Questie)

FIXES
    - Raidframe aura indicator not show correctly

1.9.0
NEW
    - Option to track all quests

FIXES
    - Pet frame text overlapping
    - Spellbook updating
    - Sorting items with socket

1.8.0
NEW
    - Added option for linking quest from questtracker with Questie support
    - Added compass, to track the nearest quest, works only with Questie

FIXES
    - Spellbook error

1.7.3
MISC
    - Change petbar autocast border
    - Change pet happines indicator
    - Spellbook is now open correctly in combat

1.7.2
FIXES
    - Fix worldmap mover

1.7.1
FIXES
    - Fix minimap addon toggle

1.7.0
NEW